# init_project

./: Cargo.toml  README.md
src/: consts.rs  lib.rs  main.rs  suggestions.rs
