[package]
name = "init_project"
version = "0.1.1"
authors = ["109149 <109149qwe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.0.0"
log = "0.4.11"
env_logger = "0.8.1"

[[bin]]
path = "src/main.rs"
name = "init_project"
