[package]
name = "init_project"
version = "0.1.5"
authors = ["109149 <109149qwe@gmail.com>"]
edition = "2018"
description = """
init_project is a project generator.
"""
repository = "https://github.com/109149/init_project"
readme = "README.md"
keywords = ["generate", "project"]
categories = ["command-line-utilities"]
license = "MIT"

# documentation = "https://docs.rs/init_project/*/init_project/"
homepage = "https://github.com/109149/init_project"

[dependencies]
clap = "2.0.0"
log = "0.4.11"
env_logger = "0.8.1"

[[bin]]
path = "src/main.rs"
name = "init_project"
